@@ -37,6 +37,7 @@ qai-show-throughput-on-inserter=Show throughput on inserter
 qai-show-throughput-on-pickup=Show throughput on pickup
 qai-show-throughput-on-drop=Show throughput on drop
 qai-highlight-default-drop-offset=Highlight default drop offset
+qai-always-use-default-drop-offset=Always use default drop offset
 qai-pipette-after-place-and-adjust=Pipette after place & adjust
 qai-pipette-copies-vectors=Pipette copies vectors
 qai-mirrored-inserters-only=Mirrored inserters only
@@ -91,6 +92,7 @@ qai-show-throughput-on-inserter=Show estimated inserter throughput when hovering
 qai-show-throughput-on-pickup=Show estimated inserter throughput when adjusting the pickup position.
 qai-show-throughput-on-drop=Show estimated inserter throughput when adjusting the drop position.
 qai-highlight-default-drop-offset=While adjusting the drop position highlight the drop offset within a tile which is determined to be the default.
+qai-always-use-default-drop-offset=Even with Near inserters researched, continue selecting whole tiles using the default drop offset. With Mirrored inserters only this skips selecting drop entirely. -- TODO: mention key bind to enable adjustment once
 qai-pipette-after-place-and-adjust=Automatically pipette (__CONTROL__smart-pipette__) the inserter after having used __CONTROL__qai-adjust__ to place an inserter and having adjusted said placed inserter.
 qai-pipette-copies-vectors=When using pipette (__CONTROL__smart-pipette__) on an inserter, so long as it is held in cursor newly placed inserters will have have the same pickup and drop vectors.
 qai-mirrored-inserters-only=When enabled, inserters are only allowed to have pickup and drop positions/tiles exactly opposite of each other, mirrored at the center of the inserter.
