@@ -164,7 +164,7 @@
   - [ ] add several key binds which affect the drop offset. something like near/far toggle, left/middle/right cycle... maybe that's it.
   - [ ] handle key binds which change drop offset while not idle and selecting a selectable differently
   - [ ] record a new video showcasing just all of the key bind interactions at once
-- [ ] probably add a setting to disable drop offset selection per player, especially with the addition of a "toggle near/far" offset key bind
+- [x] probably add a setting to disable drop offset selection per player, especially with the addition of a "toggle near/far" offset key bind
   - [ ] add key bind which enabled being able to pick the drop offset just this once
   - [ ] rerecord videos in which the settings window is visible, since settings have changed now
 - [x] snap pickup highlight to grid
