@@ -30,15 +30,22 @@ data:extend({
   },
   {
     type = "bool-setting",
-    name = "qai-pipette-after-place-and-adjust",
+    name = "qai-always-use-default-drop-offset",
     order = "e",
+    setting_type = "runtime-per-user",
+    default_value = false,
+  },
+  {
+    type = "bool-setting",
+    name = "qai-pipette-after-place-and-adjust",
+    order = "f",
     setting_type = "runtime-per-user",
     default_value = true,
   },
   {
     type = "bool-setting",
     name = "qai-pipette-copies-vectors",
-    order = "f",
+    order = "g",
     setting_type = "runtime-per-user",
     default_value = false,
   },
